--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "keywords": ["react", "starter"],
   "main": "src/index.js",
   "dependencies": {
+    "autoprefixer": "10.2.4",
+    "postcss-cli": "8.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "tailwind": "4.0.0"
   },
   "devDependencies": {
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch:css": "postcss src/styles.css -o src/tailwind.css"
   },
   "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
